added comments to blackjack components